chore: remove obsolete endpoints (#320)
